[package]
name = "mr-prober"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", optional = true }
cfg-if = { version = "1" }
thiserror = { version = "2" }
async-trait = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
enclose = { version = "1" }
rand = { version = "0.8" }
impls = { version = "1" }

[features]
file = []
runtime-tokio = ["dep:tokio", "tokio/fs", "tokio/sync", "tokio/io-util"]
